--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,101 @@
-.App {
+h1 {
+  font-family: 'Mansalva', cursive;
+}
+
+h2 {
+  text-decoration: underline;
+  text-underline-position: under;
+}
+
+h3, h4, body, p, button {
+  font-family: 'Karla', sans-serif;
+}
+
+header {
+  width: 100%;
   text-align: center;
+  display: flex;
+  justify-content: space-around;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: 0 20em;
+}
+
+.Question {
+  display: block;
+  flex-direction: column;
+  line-height: normal;
+}
+
+.button-box {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1em;
+}
+
+.input-field {
+  width: 100%;
+}
+
+input {
+  width: 50%;
+}
+
+
+.answer-button {
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
+}
+
+.answer-button:hover {
+  background-color: #4CAF50; /* Green */
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.start-button {
+  -webkit-transition-duration: 1s; /* Safari */
+  transition-duration: 0.4s;
+  background-color: #f44336; 
+  color: white; 
+  font-size: 2em;
+  width: 100%;
+}
+
+.start-button:hover {
+  background-color: green; /* Green */
+  color: white;
+}
+
+.skip-button {
+  -webkit-transition-duration: 1s; /* Safari */
+  transition-duration: 0.4s;
+  background-color: green; 
+  color: white; 
+  font-size: 1em;
+  width: 7em;
+}
+
+.skip-button:hover {
+  background-color: grey; /* Green */
+  color: white;
+}
+
+.back-button {
+  -webkit-transition-duration: 1s; /* Safari */
+  transition-duration: 0.4s;
+  background-color: #f44336; 
+  color: white; 
+  font-size: 1em;
+  width: 7em;
+}
+
+.back-button:hover {
+  background-color: grey; /* Green */
+  color: white;
 }
